# Titan2.0

./: .dockerignore  .env  .env.docker.example  .env.example  .env.production  .gitignore  .pnp.cjs  =12.0  ACCURACY_VERIFICATION_SUMMARY.md  ADVANCED_FEATURES_GUIDE.md  ADVANCED_FEATURES_SUMMARY.md  AI_SCORING_IMPLEMENTATION.md  AI_SCORING_RETURNS.md  ALTERNATE_TITAN_INTEGRATION_RECOMMENDATIONS.md  ARBITRAGE_ENGINE_README.md  ARM_OPTIMIZATION_GUIDE.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_EXECUTIVE_SUMMARY_FINAL.md  AUDIT_SUMMARY_QUICK_REFERENCE.md  CANONICAL_TOKEN_UNIVERSE_INDEX.md  CHAINLINK_ORACLE_INTEGRATION_SUMMARY.md  CHANGELOG.md  CHECKLIST_VALIDATION_SUMMARY.md  COMPLETE_SWAP_ROUTES_MAP.md  COMPREHENSIVE_AUDIT_REPORT_20260105_041434.md  COMPREHENSIVE_AUDIT_REPORT_20260105_041847.md  COMPREHENSIVE_CODE_REVIEW.md  COMPREHENSIVE_SIMULATION_GUIDE.md  CORE_IMPLEMENTATION_SUMMARY.md  CORE_REBUILD_README.md  CRITICAL_IMPROVEMENTS_SUMMARY.md  CROSS_CHAIN_ADDRESS_REGISTRY.md  Cargo.toml  DASHBOARD_GUIDE.md  DASHBOARD_IMPLEMENTATION_SUMMARY.md  DASHBOARD_QUICKSTART.md  DATA_FLOW_VISUALIZATION.md  DEPENDENCIES.md  DEPLOYMENT_COMPLETE.txt  DEPLOYMENT_PREREQUISITES_CHECKLIST.md  (+236 more)
agents/: __init__.py  demo.py  examples.py  super_agent_manager.py
certs/: external_gateway_cert.pem  external_gateway_key.pem  secret_hash.txt
config/: agent_config.json  (+2 more)
core-rust/: Cargo.toml
core-rust/src/: commander.rs  config.rs  enum_matrix.rs  http_server.rs  lib.rs  simulation_engine.rs
core-rust/src/omniarb/: data_fetcher.rs  matrix_parser.rs  mod.rs  model_bridge.rs  tar_scorer.rs
(+211 files in other folders)
